--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@
 name: Github Action for LaTeX
 
 inputs:
-  element_files:
+  root_file:
     required: true
   compiler:
     default: latexmk
@@ -19,7 +19,7 @@ runs:
   using: docker
   image: Dockerfile
   args:
-    - ${{ inputs.element_files }}
+    - ${{ inputs.root_file }}
     - ${{ inputs.compiler }}
     - ${{ inputs.args }}
   
